--- a/express-website/public/contact.html
+++ b/express-website/public/contact.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
-  <title>Home</title>
+  <title>Contacts</title>
 </head>
 <body>
   <!-- Navbar -->
   <div id="navbar-placeholder"></div>
-  <h1 class="font-extrabold lg:text-6xl text-center py-10 sm:text-3xl sm:px-20">Our Services</h1>
+  <h1 class="font-extrabold lg:text-6xl text-center py-10 sm:text-3xl sm:px-20">CONTACTS</h1>
   <div class="flex lg:flex-row sm:flex-col">
     <div class="flex justify-center w-full px-4">
       <div class="w-full max-w-lg p-6 bg-white rounded-lg shadow-md">
