--- a/express-website/public/navbar.html
+++ b/express-website/public/navbar.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800 text-white py-4 px-8">
+<nav class="bg-gray-800 text-white py-4 px-8 sticky top-0 z-50 left-0">
   <div class="flex justify-between items-center">
     <div class="text-3xl font-bold">
       <a href="#" class="hover:text-gray-400">Marie Gallery</a>
